# generaite_todo_app_4

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  Cargo.toml
config/: default.toml  development.toml  production.toml  test.toml
documentation/: tasks.yml
documentation/design/: architecture.md  code_standards.md  dependency_analysis.md  folder_structure.md  tech_stack.md  test_strategy.md  user_stories.md
documentation/guides/: how_to_set_up_axum.md  how_to_write_new_entity.md
documentation/process/: task_expansion_prompt.md
documentation/resources/: documentation.yml
entity/: Cargo.toml
entity/src/: category.rs  lib.rs  mod.rs  prelude.rs  task.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20240901_000001_create_task_table.rs  m20240901_000002_create_category_table.rs  m20240901_000003_create_task_table.rs
src/: config.rs  db.rs  main.rs
src/routes/: mod.rs
src/services/: axum_web_server.rs  mod.rs
