[package]
name = "generaite_todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.28.2", features = ["full"] }
config = "0.13.3"
once_cell = "1.18.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.72"
