[package]
name = "generaite_todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "~1.1.0-rc.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.28.2", features = ["full"] }
config = "0.13.3"
once_cell = "1.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.72"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.5"
tower = "0.5.0"
entity = { path = "./entity" }

[workspace]
members = [".", "entity", "migration"]

[dev-dependencies]
sea-orm-cli = "~1.1.0-rc.1"
